[FIX]Top LOGO not centered correctly
- used only left property, not centered by transform property => fixed

--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ body {
   position: absolute;
   font-size: 2.4rem;
   top: -9rem;
-  left: 47%;
+  left: 50%;
+  transform: translate(-50%, 0);
   letter-spacing: 0.5rem;
 }
 .main,
